--- a/views/home.jade
+++ b/views/home.jade
@@ -2,10 +2,10 @@ extends layout
 
 block content
     .container
-        h1 Register Page
-        p.lead Say something worthwhile here.
+        h1 +1 Maisons lololol
+        p.lead La tronche de la place pour faire la teuf
         br
-        form(role='form', action="/register",method="post", style='max-width: 300px;')
+        form(role='form', action="/home",method="post", style='max-width: 300px;')
             .form-group
                 input.form-control(type='text', name="username", placeholder='Enter Username')
             .form-group
