--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ html
                 .navbar-collapse.collapse
                     ul.nav.navbar-nav
                         li.active
-                            a(href='/') Home
+                            a(href='/') Index
                         li
                             a(href='#about') About
                         li
